force-app/main/default/objects/Cohort__c/Cohort__c.object-meta.xml
<CustomObject>
    <label>Cohort</label>
    <nameField>
        <displayFormat>CO-{0000}</displayFormat>
        <label>Cohort Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cohorts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>