force-app/main/default/objects/Cohort__c/fields/Cohort_Label__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Label__c</fullName>
    <formula>Course__r.Name &amp; " - " &amp; TEXT(Start_Date__c)</formula>
    <label>Cohort Label</label>
    <type>Text</type>
</CustomField>