force-app/main/default/objects/Cohort__c/fields/Delivery_Mode__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Mode__c</fullName>
    <label>Delivery Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Online</fullName><default>false</default><label>Online</label></value>
            <value><fullName>In-Person</fullName><default>false</default><label>In-Person</label></value>
            <value><fullName>Hybrid</fullName><default>false</default><label>Hybrid</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>