force-app/main/default/objects/Cohort__c/fields/Enrolled_Count__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Count__c</fullName>
    <label>Enrolled Count</label>
    <summaryFilterItems>
        <field>Enrolment__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Enrolment__c.Cohort__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>