force-app/main/default/objects/Cohort__c/fields/Seats_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Seats_Remaining__c</fullName>
    <formula>Capacity__c - Enrolled_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seats Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>